test/spec/address.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/address.wast
(;; STDOUT ;;;
out/test/spec/address.wast:207: assert_malformed passed:
  out/test/spec/address/address.1.wat:1:33: error: offset must be less than or equal to 0xffffffff
  (memory 1)(func (drop (i32.load offset=4294967296 (i32.const 0))))
                                  ^^^^^^^^^^^^^^^^^
239/239 tests passed.
;;; STDOUT ;;)
